# model/contactus.model.js
@@ -1,27 +1,26 @@
-import { model, Schema } from "mongoose";
+import mongoose from "mongoose";
 
-const contactSchema = new Schema({
-    name: {
-        type: String,
-        required: true
+const contactSchema = new mongoose.Schema({
+    fullName: {
+      type: String,
+      required: true
     },
     email: {
-        type: String,
-        required: true
+      type: String,
+      required: true
     },
-    subject: {
-        type: String,
-        required: true
+    subject:{
+      type: String,
+      required: false
     },
     message: {
-        type: String,
-        required: true
-    },
-    date: {
-        type: Date,
-        default: Date.now
+      type: String,
+      required: true
     }
-});
+  }, {
+    timestamps: true
+  });
+  
+ const contactModel=new mongoose.model('contact',contactSchema)
 
-const contactModel = model('Contact', contactSchema);
-export default contactModel;
+ export default contactModel;
